--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "axios": "^0.21.1",
     "babel-preset-stage-1": "^6.1.18",
+    "bootstrap": "^5.0.1",
+    "bootstrap-icons": "^1.5.0",
     "lodash": "^3.10.1",
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
-    "react-redux": "5.0.7",
-    "redux": "4.0.0"
+    "react": "16.8.3",
+    "react-bootstrap": "^1.6.0",
+    "react-dom": "16.8.0",
+    "react-redux": "7.1.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
